# duckdb-embedded-analytics-engine

./: .env.example  README.md  docker-compose.yml  pyproject.toml
configs/: project.json
data/: README.md
demo/: index.html  styles.css
docs/: architecture.md  close_triage_checklist.md  evaluation.md  runbook.md
outreach/: email_to_authors.md
research/: improvement_plan.md  innovation_memo.md  sources.md  upstream_audit.md  upstream_snapshot.json
social/: linkedin_post.md  publish_checklist.md
